objects/Ticket_Event__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Tickets__c</fullName>
        <label>Assigned Tickets</label>
        <summaryFilterItems>
            <field>Ticket__c.isSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Ticket__c.Ticket_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Use_Of_Ticket__c</fullName>
        <label>Ticket Use Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_City__c</fullName>
        <label>Event City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_End_Date_Time__c</fullName>
        <label>Event End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Organizer_Email__c</fullName>
        <label>Event Organizer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Organizer_Phone_Number__c</fullName>
        <label>Event Organizer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Event_Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Organizer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ticket_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date_Time__c</fullName>
        <label>Event Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_State__c</fullName>
        <label>Event State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Street_Address__c</fullName>
        <label>Event Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <label>Event Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Venue_Name__c</fullName>
        <description>Event Venue Name dependent on State picklist</description>
        <label>Event Venue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Alamodome</fullName>
                </value>
                <value>
                    <fullName>American Airlines Center</fullName>
                </value>
                <value>
                    <fullName>Amon G. Carter Stadium</fullName>
                </value>
                <value>
                    <fullName>AT &amp; T Center</fullName>
                </value>
                <value>
                    <fullName>AT &amp; T Stadium</fullName>
                </value>
                <value>
                    <fullName>BBVA Compass Stadium</fullName>
                </value>
                <value>
                    <fullName>Boone Pickens Stadium</fullName>
                </value>
                <value>
                    <fullName>Chesapeake Energy Arena</fullName>
                </value>
                <value>
                    <fullName>Chickasaw Bricktown Ballpark</fullName>
                </value>
                <value>
                    <fullName>Darrell K. Royal-TX Memorial Stadium</fullName>
                </value>
                <value>
                    <fullName>Dell Diamond</fullName>
                </value>
                <value>
                    <fullName>Dr. Pepper Arena</fullName>
                </value>
                <value>
                    <fullName>Gallagher Iba Arena</fullName>
                </value>
                <value>
                    <fullName>Gaylord Family-OK Memorial Stadium</fullName>
                </value>
                <value>
                    <fullName>Globe Life Park</fullName>
                </value>
                <value>
                    <fullName>Guaranteed Rate Field</fullName>
                </value>
                <value>
                    <fullName>Isotopes Park (Baseball)</fullName>
                </value>
                <value>
                    <fullName>Jones AT &amp; T Stadium</fullName>
                </value>
                <value>
                    <fullName>Kyle Field</fullName>
                </value>
                <value>
                    <fullName>Lloyd Noble Center</fullName>
                </value>
                <value>
                    <fullName>McLane Stadium</fullName>
                </value>
                <value>
                    <fullName>Minute Maid Park</fullName>
                </value>
                <value>
                    <fullName>NRG Stadium</fullName>
                </value>
                <value>
                    <fullName>ONEOK Field</fullName>
                </value>
                <value>
                    <fullName>Soldier Field - (Chicago Bears)</fullName>
                </value>
                <value>
                    <fullName>Toyota Center</fullName>
                </value>
                <value>
                    <fullName>Toyota Stadium</fullName>
                </value>
                <value>
                    <fullName>United Center</fullName>
                </value>
                <value>
                    <fullName>University Stadium (Football)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <label>Event Venue(old)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Zip_Postal_Code__c</fullName>
        <label>Event Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Tickets__c</fullName>
        <label>Total Number of Tickets</label>
        <summaryForeignKey>Ticket__c.Ticket_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unassigned_Tickets__c</fullName>
        <label>Unassigned Tickets</label>
        <summaryFilterItems>
            <field>Ticket__c.isSelected__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Ticket__c.Ticket_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>incrementalNumberOfTickets__c</fullName>
        <label>incrementalNumberOfTickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reportUrl__c</fullName>
        <label>reportUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ticket Event</label>
    <listViews>
        <fullName>All_Events_with_Unassigned_Tickets</fullName>
        <columns>Event_Description__c</columns>
        <columns>Total_Number_of_Tickets__c</columns>
        <columns>Assigned_Tickets__c</columns>
        <columns>Unassigned_Tickets__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Unassigned_Tickets__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Events with Unassigned Tickets</label>
    </listViews>
    <listViews>
        <fullName>All_Texas_Events</fullName>
        <columns>Event_Description__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <columns>Event_Venue_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_State__c</field>
            <operation>equals</operation>
            <value>Texas</value>
        </filters>
        <label>All Texas Events</label>
    </listViews>
    <listViews>
        <fullName>All_Ticket_Events</fullName>
        <columns>Event_Description__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Ticket Events</label>
    </listViews>
    <listViews>
        <fullName>All_Upcoming_Events</fullName>
        <columns>Event_Description__c</columns>
        <columns>Total_Number_of_Tickets__c</columns>
        <columns>Assigned_Tickets__c</columns>
        <columns>Unassigned_Tickets__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>All_Upcoming_IL_Events</fullName>
        <columns>Event_Description__c</columns>
        <columns>Total_Number_of_Tickets__c</columns>
        <columns>Assigned_Tickets__c</columns>
        <columns>Unassigned_Tickets__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Event_State__c</field>
            <operation>equals</operation>
            <value>Illinois</value>
        </filters>
        <label>All Upcoming IL Events</label>
    </listViews>
    <listViews>
        <fullName>All_Upcoming_TX_Events</fullName>
        <columns>Event_Description__c</columns>
        <columns>Total_Number_of_Tickets__c</columns>
        <columns>Assigned_Tickets__c</columns>
        <columns>Unassigned_Tickets__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Event_State__c</field>
            <operation>equals</operation>
            <value>Texas</value>
        </filters>
        <label>All Upcoming TX Events</label>
    </listViews>
    <listViews>
        <fullName>IL_Events</fullName>
        <columns>Event_Description__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_State__c</field>
            <operation>equals</operation>
            <value>Illinois</value>
        </filters>
        <label>All Illinois Events</label>
    </listViews>
    <listViews>
        <fullName>Mgr_All_Illinois_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Description__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_State__c</field>
            <operation>equals</operation>
            <value>Illinois</value>
        </filters>
        <label>2 Mgr All Illinois Events</label>
        <sharedTo>
            <group>Ticket_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_Mgr_All_Events_with_Unassigned_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Event_Description__c</columns>
        <columns>Total_Number_of_Tickets__c</columns>
        <columns>Assigned_Tickets__c</columns>
        <columns>Unassigned_Tickets__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Unassigned_Tickets__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>1 Mgr All Events with Unassigned Tickets</label>
        <sharedTo>
            <group>Ticket_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X3_Mrg_All_Texas_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Description__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <columns>Event_Venue_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_State__c</field>
            <operation>equals</operation>
            <value>Texas</value>
        </filters>
        <label>3 Mrg All Texas Events</label>
        <sharedTo>
            <group>Ticket_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X4_Mgr_All_Ticket_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Description__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>4 Mgr All Ticket Events</label>
        <sharedTo>
            <group>Ticket_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X5_Mgr_All_Upcoming_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Description__c</columns>
        <columns>Total_Number_of_Tickets__c</columns>
        <columns>Assigned_Tickets__c</columns>
        <columns>Unassigned_Tickets__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>5 Mgr All Upcoming Events</label>
        <sharedTo>
            <group>Ticket_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X6_Mgr_All_Upcoming_IL_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Description__c</columns>
        <columns>Assigned_Tickets__c</columns>
        <columns>Unassigned_Tickets__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Event_State__c</field>
            <operation>equals</operation>
            <value>Illinois</value>
        </filters>
        <label>6 Mgr All Upcoming IL Events</label>
        <sharedTo>
            <group>Ticket_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X7_Mgr_All_Upcoming_TX_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Description__c</columns>
        <columns>Assigned_Tickets__c</columns>
        <columns>Unassigned_Tickets__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Event_Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_State__c</field>
            <operation>equals</operation>
            <value>Texas</value>
        </filters>
        <filters>
            <field>Event_Start_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>7 Mgr All Upcoming TX Events</label>
        <sharedTo>
            <group>Ticket_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X8_Mgr_TODAY</fullName>
        <columns>NAME</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>8 Mgr TODAY</label>
        <sharedTo>
            <group>Ticket_Managers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Ticket Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ticket_Event_Address_Required_Fields</fullName>
        <active>true</active>
        <description>Selecting upon Other from Event Venue picklist, Street, city, Zip Code should not be empty.</description>
        <errorConditionFormula>ISPICKVAL(Event_Venue_Name__c, &apos;Other&apos;) &amp;&amp; ( Event_City__c = null ||  Event_Street_Address__c = null ||  Event_Zip_Postal_Code__c = null)</errorConditionFormula>
        <errorMessage>Event Street, Event City, Event Zip Code are required when Event Venue is Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Event_Time</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!(ISBLANK (Event_Time__c)), NOT(REGEX( Event_Time__c ,
&quot;(\\d([0-1]|[1-9]):\\d([0-1]|[1-60]) (AM|am|PM|pm))&quot;)))</errorConditionFormula>
        <errorDisplayField>Event_Time__c</errorDisplayField>
        <errorMessage>Event Time should be enter in format HH:MM PM/AM</errorMessage>
    </validationRules>
</CustomObject>